--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
 
     font-family: 'Arial', sans-serif;
 
-    background: radial-gradient(circle at 1% 100%, #000428, #004e92, #00142a 90%, #000 100%);
+    background: radial-gradient(circle at top, #004e92, #00142a, #000428, #000);
 
     color: white;
 
