--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ section {
 .planet img {
     width: 300px;
     height: 300px;
-    transition: transform 0.8s ease-out, opacity 0.8s ease-out;
+    transition: transform 0.8s ease-out, opacity 0.1s ease-out;
 }
 
 .text {
@@ -69,7 +69,7 @@ section {
     margin: auto;
     text-align: center;
     opacity: 0;
-    transition: transform 0.8s ease-out, opacity 0.8s ease-out;
+    transition: transform 0.8s ease-out, opacity 0.1s ease-out;
 }
 
 .content.active img {
@@ -92,6 +92,16 @@ section {
     }
 }
 
+.picture {
+    transition: transform 0.3s ease-in-out;
+}
+
+/* Hover-effektus eltolódott állapotban */
+.content.active .picture:hover {
+    transform: translateX(-200px) scale(1.5); /* Megtartja az eltolást (-100px) és növeli a méretet */
+}
+
+/* háttéranimáció + felvivő gomb */
 .stars {
     position: fixed;
     top: 0;
