--- a/style.css
+++ b/style.css
@@ -231,3 +231,14 @@ nav.scrolled {
     opacity: 0.9;
 }
 
+/* Korlátozott bolygók halványítva jelenjenek meg */
+.restricted {
+    opacity: 0.5;
+    pointer-events: none; /* Ne lehessen interakcióba lépni */
+}
+
+.restricted:hover {
+    cursor: not-allowed;
+    opacity: 0.4;
+}
+
