--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Arial', sans-serif;
-    background: radial-gradient(circle at top, #004e92, #00142a, #000428, #000);
+    background: radial-gradient(circle at top, #004e92, #001f41, #000426, #000);
     color: white;
     margin: 0;
     padding: 0;
