--- a/style2.css
+++ b/style2.css
@@ -107,9 +107,7 @@ section {
     transform: translateX(-200px) scale(1.5); /* Megtartja az eltolást (-100px) és növeli a méretet */
 }
 
-/* háttéranimáció + felvivő gomb */
-/* A csillagok elhelyezése és animációja */
-.stonesx, .stonesy {
+.stars {
     position: fixed;
     top: 0;
     left: 0;
@@ -119,42 +117,15 @@ section {
     z-index: -1;
 }
 
-/* A vízszintesen lapított kövek (stone) */
-.stone {
+.star {
     position: absolute;
-    width: 13px; /* Szélesség */
-    height: 8px; /* Magasság */
-    background: rgb(35, 35, 35);
+    width: 2px;
+    height: 2px;
+    background: white;
     opacity: 0.8;
     border-radius: 50%;
-    animation: starAnimation 200s linear infinite; /* Animáció */
+    animation: starAnimation 100s linear infinite;
 }
-
-/* A függőlegesen lapított kövek (stoney) */
-.stoney {
-    position: absolute;
-    width: 9px; /* Szűkebb szélesség */
-    height: 12px; /* Magasabb magasság */
-    background: rgb(36, 36, 36);
-    opacity: 0.8;
-    border-radius: 50%;
-    animation: starAnimation 100s linear infinite; /* Animáció */
-}
-
-/* Kulcsanimáció a csillagok mozgásához (ne tűnjenek el) */
-@keyframes starAnimation {
-    0% {
-        transform: translateY(0); /* Kezdő pozíció, az elejétől */
-        opacity: 1;
-    }
-    100% {
-        transform: translateY(100vh); /* Az oldal teljes magassága */
-        opacity: 0.5; /* Lassan halványodjon el */
-    }
-}
-
-
-
 
 #scrollToTop {
     position: fixed;
@@ -266,4 +237,20 @@ nav.scrolled {
 .planet.disabled {
     pointer-events: none;
     opacity: 0.5;
+}
+
+.login-btn {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    padding: 10px 15px;
+    background-color: #007BFF;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.login-btn:hover {
+    background-color: #0056b3;
 }
