--- a/VEGLEGES/Solar_System_webpage/style.css
+++ b/VEGLEGES/Solar_System_webpage/style.css
@@ -102,12 +102,10 @@ section {
     transition: transform 0.3s ease-in-out;
 }
 
-/* Hover-effektus eltolódott állapotban */
 .content.active .picture:hover {
-    transform: translateX(-200px) scale(1.5); /* Megtartja az eltolást (-100px) és növeli a méretet */
+    transform: translateX(-200px) scale(1.5);
 }
 
-/* háttéranimáció + felvivő gomb */
 .stars {
     position: fixed;
     top: 0;
@@ -150,7 +148,6 @@ section {
     transform: scale(1.1);
 }
 
-/* Navigáció sáv háttér animáció */
 nav {
     background: linear-gradient(45deg, #ffa500, #ff5733, #3357ff);
     background-size: 200% 200%;
@@ -165,7 +162,6 @@ nav {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
 }
 
-/* Színátmenet animáció */
 @keyframes gradientAnimation {
     0% {
         background-position: 0% 50%;
@@ -178,7 +174,6 @@ nav {
     }
 }
 
-/* Navigációs linkek animációja */
 nav a {
     color: white;
     text-decoration: none;
@@ -188,20 +183,17 @@ nav a {
     transition: color 0.3s, transform 0.3s ease;
 }
 
-/* Hover effekt */
 nav a:hover {
     color: #ffe600;
     transform: scale(1.2) rotate(2deg);
 }
 
-/* Aktív link stílus */
 nav a.active {
     font-weight: bold;
     color: #00ffcc;
     border-bottom: 2px solid #00ffcc;
 }
 
-/* Aláhúzás animáció */
 nav a::after {
     content: "";
     position: absolute;
@@ -219,8 +211,8 @@ nav a:hover::after {
 }
 
 nav {
-    background: rgba(0, 0, 0, 0.8); /* Átlátszó fekete háttér */
-    backdrop-filter: blur(5px); /* Homályosítás */
+    background: rgba(0, 0, 0, 0.8);
+    backdrop-filter: blur(5px);
     padding: 1em 2em;
     border-radius: 10px;
     transition: transform 0.3s ease, opacity 0.3s ease;
